fixed main align to centre

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ header {
 
 main {
     margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .ontop div {
@@ -85,9 +88,5 @@ a {
         width: 28.5625rem;
     }
 
-    main {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
+
 }
